2008-12-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkTreeModel.xs: Document the signature of the callback used
	by Gtk2::TreeModel::foreach.  Patch by Kevin Ryde.

2008-12-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkEntryCompletion.t
	* xs/GtkEntryCompletion.xs: In Gtk2::EntryCompletion::set_model,
	allow undef for the model parameter.  (#562682)

2008-12-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkEntryCompletion.xs: Fix a leak in
	Gtk2::EntryCompletion::new.  (#562682)

2008-11-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/00.Gtk2.t
	* xs/Gtk2.xs: Wrap gtk_get_option_group.

2008-11-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm:
	* NEWS:
	* README: Unstable release 1.210.

2008-11-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Unconditionally use META_MERGE.  Tell the CPAN
	indexer to ignore the directories "tools" and "xs".

2008-11-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm: Link to Pango.

2008-11-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL
	* README: Update Pango requirement to 1.210.

2008-11-15  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Use the standalone Pango module.

	* CodeGen.pm: Add handlers for 'Alias' variants of most types.

	* maps_pango-1.0
	* maps_pango-1.4
	* maps_pango-1.6
	* maps_pango-1.8
	* maps_pango-1.10
	* maps_pango-1.16
	* maps_pango-1.18: Use the above to register Gtk2::Pango::* type
	aliases.

	* gtk2perl.h: Include pango-perl.h

	* Gtk2.pm: Use Pango.  Set up package aliases under Gtk2::Pango::
	for the things that now live under Pango::.

	* xs/Gtk2.xs: Remove unneeded pango stuff.  Make the doc generator
	create stub Gtk2::Pango::* POD pages that explain the situation
	and link to the relevant Pango::* docs.

	* MANIFEST
	* t/pango-compat.t (added): Add some tests that try to ensure
	backwards compatibility in ways not tested by the existing
	t/Pango*.t tests.

	* doctypes
	* Makefile.PL: Remove unneeded pango stuff.

	* MANIFEST